# test_sfml

./: CMakeLists.txt  README.md
cmake/: compilation_flags.cmake
include/: struct.h
src/: main.cpp
